# ROGueENEMY

./: .gitignore  71-sony.rules  80-playstation-no-libinput.rules  80-playstation.rules  99-disable-sonypad.rules  99-js-block.rules  99-rogue.rules  99-usbhid.rules  99-xbox360-block.rules  CMakeLists.txt  Makefile  README.md  TODO.md  allynone.c  chimera_install.sh  chimera_uninstall.sh  config.cfg.default  dev_evdev.c  dev_evdev.h  dev_hidraw.c  dev_hidraw.h  dev_iio.c  dev_iio.h  dev_in.c  dev_in.h  dev_out.c  dev_out.h  dev_timer.c  dev_timer.h  devices_status.c  devices_status.h  dsegde.hid  gamepad_output.c  gamepad_output.h  imu_message.h  imu_output.c  imu_output.h  input_dev.c  input_dev.h  install.sh  (+40 more)
.github/workflows/: build.yml
References/: mail.txt
References/DualSense/: note.txt  ps5_edge.pcapng  ps5_edge_sample.pcapng
References/RC71L/: all_modes_ac_btn_short_press.txt  all_modes_cc_btn_long_press.txt  all_modes_cc_btn_short_press.txt  macro_mode_left_paddle.txt  macro_mode_right_paddle.txt  others_mode_left_paddle.txt  others_mode_right_paddle.txt
References/Steam Controller/: A.txt  B.txt  D-Down.txt  D-Left.txt  D-Right.txt  D-Up.txt  Descriptor.txt  L-Bumper.txt  Left-Paddle.txt  Left-Stick-Click.txt  Left-Stick.txt  Left-Trigger.txt  R-Bumper.txt  Right-Paddle.txt  Right-Stick-Click.txt  Right-Stick.txt  Right-Trigger.txt  Select.txt  Steam-Guide.txt  X.txt  Y.txt
References/SteamDeck/: descriptor.txt  rdesc  virt_deck.c
notes/: launch.json  vscode_debug.md
